<resources>
    <string name="app_name">MobileBox</string>
    <string name="action_settings">Settings</string>
    <string name="etiqueta_moviles_caja">Phones in the box</string>
    <string name="etiqueta_caja">box</string>
    <string name="etiqueta_obteniendo_id">Getting box ID...</string>
    <string name="boton_refrescar">Update list</string>
    <string name="boton_vaciar">Empty box</string>
    <string name="menu_acerca_de">About...</string>
    <string name="texto_copyright">\u00A9 2015 Ion Jaureguialzo Sarasola</string>
    <string name="texto_licencia_imagenes"><![CDATA[Images <a href="http://www.freepik.com">designed by Freepik</a>.]]></string>
    <string name="texto_gpl" translatable="false">
        <![CDATA[
            <p>This program is free software; you can redistribute it and/or modify
            it under the terms of the GNU General Public License as published by
            the Free Software Foundation; either version 2 of the License, or
            (at your option) any later version.</p>
            <p>This program is distributed in the hope that it will be useful,
            but WITHOUT ANY WARRANTY; without even the implied warranty of
            MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
            GNU General Public License for more details.</p>
            <p>You should have received a copy of the GNU General Public License along
            with this program; if not, write to the Free Software Foundation, Inc.,
            51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.</p>
        ]]>
    </string>
    <string name="texto_github"><![CDATA[Source code available on <a href="https://github.com/ijaureguialzo/mobilebox-profesor-android">GitHub</a>.]]></string>
</resources>
